# aotu-video

./: .gitignore  README.md  findings.md  progress.md  pyproject.toml  task_plan.md  会话交接总结.md
src/anime_pipeline/: __init__.py  config.py
src/anime_pipeline/application/: audio_service.py  export_service.py  preview_service.py  project_service.py  shot_service.py  subtitle_service.py
src/anime_pipeline/cli/: audio.py  export.py  main.py  preview.py  project.py  shot.py  subtitle.py
src/anime_pipeline/domain/: models.py
src/anime_pipeline/infrastructure/db/: __init__.py  repositories.py  schema.py
src/anime_pipeline/infrastructure/filesystem/: __init__.py  project_layout.py
src/anime_pipeline/infrastructure/providers/: tts_base.py  tts_cloud.py  tts_edge.py  tts_fake.py
src/anime_pipeline/presentation/preview/templates/: index.html.j2
tests/: media_test_utils.py  test_audio_cli.py  test_export_cli.py  test_final_export_cli.py  test_preview_cli.py  test_project_create_cli.py  test_project_listing_cli.py  test_shot_cli.py  test_subtitle_cli.py  test_tts_cloud_provider.py  test_tts_edge_provider.py
workspace/projects/demo-project/: project.db  project.yaml
workspace/projects/demo-project/outputs/: rough_cut_concat.txt
workspace/projects/real-test-demo-fixed/: project.db  project.yaml
workspace/projects/real-test-demo-fixed/outputs/: final_concat.txt  rough_cut_concat.txt
workspace/projects/real-test-demo-fixed/previews/: index.html
workspace/projects/real-test-demo-fixed/shots/shot-001/subtitles/: subtitles.srt
(+2 files in other folders)
